# gflops-bench

./: .SRCINFO  ArgParser.h  CMakeLists.txt  PKGBUILD  README.md
src/gflops-bench-1.0.0/: ArgParser.h  CMakeLists.txt  main.cpp
